fix icon prob and make the navigation work a bit on mobile devices

--- a/assets/less/view/default.less
+++ b/assets/less/view/default.less
@@ -34,14 +34,55 @@
 	.sly-navigation {
 		ul {
 			margin: 0;
-			padding: 0;
 
 			&:extend(.list-unstyled all);
 		}
 
+		/* general styles */
+		a {
+			display: block;
+
+			&:hover,
+			&:focus,
+			&:active {
+				outline: none;
+				text-decoration: none;
+			}
+		}
+
+		.sly-page-title {
+			display: none;
+
+			@media (min-width: @screen-md-min) {
+				display: inline-block;
+			}
+		}
+
+		li {
+			display: block;
+
+			&[data-toggle="collapse"] {
+				cursor: pointer;
+				position: relative;
+
+				> a {
+					display: none;
+
+					@media (max-width: @screen-sm-max) {
+						position: absolute;
+						display: block;
+						width: 100%;
+						height: 100%;
+						top: 0;
+						left: 0;
+						z-index: 1;
+					}
+				}
+			}
+		}
+
 		#sly-navi-system,
 		#sly-navi-addon {
-
 			/* variables */
 
 			@menu-border-color:        fade(@color-white, 5);
@@ -50,95 +91,47 @@
 			@menu-inactive-icon-color: fade(@color-white, 25);
 			@menu-submenu-bg-color:    darken(@color-blue-dark, 5);
 
-			/* general styles */
-
-			a:hover,
-			a:focus,
-			a:active {
-				outline: none;
-				text-decoration: none;
-			}
-
 			li {
-				display: block;
+				line-height: 59px;
+				border-bottom: 1px solid @menu-border-color;
 
-				a {
-					display: block;
-					padding-left: 20px;
-					position: relative;
-					line-height: 59px;
-					border-bottom: 1px solid @menu-border-color;
-
-					.sly-page-title {
-						display: none;
-
-						@media (min-width: @screen-md-min) {
-							display: inline-block;
-						}
+				&[data-toggle="collapse"] {
+					li a {
+						padding-left: 20px;
 					}
-				}
-
-				// @edge / TODO
-				//
-				// subpage styles for mobile devices
-
-				[data-toggle="collapse"] {
-					&:after {
-						width: @input-height-base;
-						height: @input-height-base;
-						font-size: 32px;
-						content: @sallycms-icon-component-select2-arrow;
-						color: @menu-chevron-color;
-						line-height: @input-height-base;
-						position: absolute;
-						top: 5px;
-						right: 0;
-
-						&:extend(.sallycms-icon all);
-					}
-				}
-			}
-
-			> li > a {
-				&:before {
-					width: 32px;
-					font-size: 32px;
-					content: @sallycms-icon-navigation-default;
-					margin-right: 20px;
-					vertical-align: middle;
-					position: relative;
-					display: inline-block;
-					top: -2px;
-
-					&:extend(.sallycms-icon all);
 				}
 			}
 
 			/* inactive styles */
 
 			li:not(.sly-active) {
+				&,
 				a {
 					color: @menu-inactive-color;
 
 					&:hover {
 						color: @color-green;
-
-						&:before {
-							color: @color-green;
-						}
 					}
-
-					&:before {
-						color: @menu-inactive-icon-color;
+				}
+				&:hover {
+					.sly-navigation-icon {
+						color: @color-green;
 					}
+				}
+				.sly-navigation-icon {
+					color: @menu-inactive-icon-color;
 				}
 			}
 
 			/* active styles */
+			> li.sly-active {
+				background-color: @color-green;
+			}
 
+			> li.sly-active,
 			> li.sly-active > a {
 				color: @color-white;
-				background-color: @color-green;
+
 			}
 
 			> li.sly-active > ul > li.sly-active > a {
@@ -147,23 +140,65 @@
 
 			/* icon styles */
 
-			#sly-navi-page-structure > a {
+			.sly-navigation-icon {
+				width: 32px;
+				font-size: 32px;
+				margin-right: 20px;
+				margin-left: 20px;
+				vertical-align: middle;
+				position: relative;
+				display: inline-block;
+				top: -2px;
+
+				&:before {
+					content: @sallycms-icon-navigation-default;
+				}
+
+				&:extend(.sallycms-icon all);
+			}
+
+			// @edge / TODO
+			//
+			// subpage styles for mobile devices
+			.sly-navigation-icon-collapse {
+				width: @input-height-base;
+				height: @input-height-base;
+				font-size: 32px;
+				color: @menu-chevron-color;
+				line-height: @input-height-base;
+				position: absolute;
+				top: 5px;
+				right: 0;
+				display: none;
+
+				&:before {
+					content: @sallycms-icon-component-select2-arrow;
+				}
+
+				&:extend(.sallycms-icon all);
+
+				@media (min-width: @screen-md-min) {
+					display: inline-block;
+				}
+			}
+
+			#sly-navi-page-structure .sly-navigation-icon {
 				&:extend(.sallycms-icon-navigation-structure all);
 			}
 
-			#sly-navi-page-mediapool > a {
+			#sly-navi-page-mediapool .sly-navigation-icon {
 				&:extend(.sallycms-icon-navigation-mediapool all);
 			}
 
-			#sly-navi-page-user > a {
+			#sly-navi-page-user .sly-navigation-icon {
 				&:extend(.sallycms-icon-navigation-user all);
 			}
 
-			#sly-navi-page-addon > a {
+			#sly-navi-page-addon .sly-navigation-icon {
 				&:extend(.sallycms-icon-navigation-addon all);
 			}
 
-			#sly-navi-page-system > a {
+			#sly-navi-page-system .sly-navigation-icon {
 				&:extend(.sallycms-icon-navigation-system all);
 			}
 
